# Chatbot_LLM

./: .env.example  .gitignore  README.md  [Training]_LLM_SFT.ipynb  app.py  pyproject.toml
data/eval/: vietnamese_quality_prompts.jsonl
data/preferences/: sample_preferences.jsonl
deploy/huggingface-space/: README.md
deploy/openwebui/: Modelfile.template  README.md
docs/: preference_dataset.md
scripts/: chat_cli.py  run_evaluation_prompts.py  train_ppo_rlhf.py  train_reward_model.py  train_sft.py  validate_preferences.py
src/chatbot_llm/: __init__.py  data.py  inference.py  preferences.py
